feat: #240711 创建随机卷抽取header组件

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -1,5 +1,5 @@
 .test-create {
-  .test-create-title {
+  .test-paper-save-header {
     background: white;
     display: flex;
     justify-content: space-between;
@@ -7,18 +7,18 @@
     padding: 16px 46px;
     border-bottom: 1px solid #F2F3F5;
 
-    .test-create-title-left {
+    .test-paper-save-header-left {
       display: flex;
       align-items: center;
       gap: 16px;
 
-      .test-create-title-left-back {
+      .test-paper-save-header-left-back {
         display: flex;
         align-items: center;
         gap: 8px;
         cursor: pointer;
 
-        .test-create-title-left-back-img {
+        .test-paper-save-header-left-back-img {
           display: flex;
           padding: 2px;
           align-items: flex-start;
@@ -31,7 +31,7 @@
           }
         }
 
-        .test-create-title-left-back-text {
+        .test-paper-save-header-left-back-text {
           color: #37393D;
           text-align: center;
           font-feature-settings: 'clig' off, 'liga' off;
@@ -50,7 +50,7 @@
         border-left: 1px solid #E5E6EB;
       }
 
-      .test-create-title-left-type {
+      .test-paper-save-header-left-type {
         display: flex;
         padding: 4px 16px;
         justify-content: center;
@@ -66,7 +66,7 @@
       }
     }
 
-    .test-create-title-right {
+    .test-paper-save-header-right {
       display: flex;
       padding: 16px;
       justify-content: center;
@@ -75,14 +75,14 @@
       border-radius: 8px;
       background: #FAFAFA;
 
-      .test-create-title-right-item {
+      .test-paper-save-header-right-item {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 16px;
       }
 
-      .test-create-title-right-text {
+      .test-paper-save-header-right-text {
         color: #919399;
         font-family: "PingFang SC";
         font-size: 14px;
@@ -91,7 +91,7 @@
         line-height: 22px;
       }
 
-      .test-create-title-right-number {
+      .test-paper-save-header-right-number {
         color: #000;
         font-family: D-DIN;
         font-size: 24px;
