feat: #104855 AI个性卷预览

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -189,4 +189,5 @@
 @import 'page/question-bank/testpaper-list-title.less';
 @import 'page/question-bank/testpaper-create-model.less';
 @import 'page/question-bank/testpaper-save.less';
+@import 'page/question-bank/testpaper-preview.less';
 @import 'page/question-bank/ai-analysis-intro-modal.less';
