--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -949,6 +949,7 @@
     position: relative;
     top: -2px;
     left: -12px;
+
     img {
       height: 16.5px;
     }
@@ -1176,6 +1177,71 @@
                 cursor: pointer;
               }
             }
+
+            .question-category-choose-all-body-empty {
+              display: flex;
+              width: 121px;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              gap: 8px;
+              position: absolute;
+              left: 239px;
+              top: 357px;
+
+              .question-category-choose-all-body-empty-content {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 9px;
+                align-self: stretch;
+
+                .question-category-choose-all-body-empty-content-img {
+                  display: flex;
+                  width: 121px;
+                  height: 99px;
+                  justify-content: center;
+                  align-items: center;
+
+                  img {
+                    width: 105px;
+                    height: 99px;
+                    flex-shrink: 0;
+                  }
+                }
+
+                .question-category-choose-all-body-empty-content-text {
+                  color: #5E6166;
+                  text-align: center;
+                  font-family: "PingFang SC";
+                  font-size: 14px;
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 22px;
+                }
+              }
+
+              .question-category-choose-all-body-add-category-btn {
+                display: flex;
+                height: 32px;
+                padding: 4px 15px;
+                justify-content: center;
+                align-items: center;
+                gap: 8px;
+                border: hidden;
+                border-radius: 2px;
+                background: #46C37B;
+                box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
+
+                color: #FFF;
+                text-align: center;
+                font-family: "PingFang SC";
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 22px;
+              }
+            }
           }
 
           .ant-checkbox + span {
@@ -1327,6 +1393,70 @@
             line-height: 22px;
           }
         }
+      }
+    }
+  }
+}
+
+.question-category-add-modal {
+  .question-category-add-modal-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+
+    .question-category-add-modal-body-description {
+      color: #919399;
+      text-align: center;
+      font-family: "PingFang SC";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+    }
+
+    .question-category-add-modal-body-content {
+      display: flex;
+      align-items: flex-start;
+      gap: 16px;
+      align-self: stretch;
+
+      .question-category-add-modal-body-content-label {
+        display: flex;
+        padding: 5px 0;
+        align-items: center;
+        gap: 4px;
+        flex-shrink: 0;
+
+        span {
+          color: #37393D;
+          font-family: "PingFang SC";
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 22px;
+        }
+      }
+
+      textarea {
+        display: flex;
+        height: 108px;
+        padding: 5px 12px;
+        flex-direction: column;
+        align-items: flex-start;
+        flex: 1 0 0;
+        width: 300px;
+        border-radius: 2px;
+        border: 1px solid #DCDEE0;
+        background: #FFF;
+        align-self: stretch;
+        color: #37393D;
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
       }
     }
   }
