feat: #240715 选择分类无法选择没有题目的分类

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -286,6 +286,13 @@
             font-style: normal;
             font-weight: 500;
             line-height: 22px;
+
+            .question-type-display-header-top-text {
+              background-repeat: no-repeat;
+              background-position: left bottom;
+              background-size: 100% 6px;
+              background-image: linear-gradient(83deg, #EFFFF6 38.56%, #93E1B4 100%);
+            }
           }
 
           .question-type-display-header-normal {
