--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -369,7 +369,7 @@
           }
 
           .question-type-display-cell-number-disable {
-            background: #F5F5F5;
+            background: #F5F5F5 !important;
           }
 
           .question-type-display-cell-score {
@@ -408,10 +408,22 @@
             line-height: 22px;
           }
 
+          .row-editing {
+            background: rgba(70, 195, 123, 0.05);
+
+            input {
+              background: rgba(70, 195, 123, 0);
+            }
+          }
+
           input {
             border: 0;
             width: 100%;
             height: 100%;
+          }
+
+          input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
           }
         }
 
@@ -717,7 +729,7 @@
       flex: none;
 
       a {
-        color: var(--PC, #46C37B);
+        color: #46C37B;
       }
     }
 
