feat: #104872  模拟考试-vue重构试卷列表

--- a/app/Resources/static-src/app/less/page/item-bank-exercise/index.less
+++ b/app/Resources/static-src/app/less/page/item-bank-exercise/index.less
@@ -1,4 +1,6 @@
 .exercise-container {
+  display: flex;
+  justify-content: space-between;
   .exercise-nav.exercise-nav-tabs {
     padding-left: 0px;
     li {
