--- a/app/Resources/static-src/app/less/page/item-bank-exercise/add-test-paper-drawer.less
+++ b/app/Resources/static-src/app/less/page/item-bank-exercise/add-test-paper-drawer.less
@@ -8,42 +8,9 @@
     margin-bottom: 20px;
   }
 
-  .list-bottom {
-    width: 100%;
-    padding-left: 22px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
   .checkbox-text {
     padding-left: 32px;
     font-weight: normal;
-  }
-
-  .paper-type {
-    width: 92px;
-    text-align: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 16px;
-    padding: 4px 0;
-    border-radius: 4px;
-  }
-
-  .paper-type-regular {
-    background-color: rgb(232, 243, 255);
-    color: rgb(22, 93, 255);
-  }
-
-  .paper-type-random {
-    background-color: rgb(255, 243, 232);
-    color: rgb(247, 114, 52);
-  }
-
-  .paper-type-ai {
-    background-color: rgb(232, 255, 234);
-    color: rgb(0, 180, 42);
   }
 
   .created_time {
@@ -74,5 +41,44 @@
     z-index: 1;
     display: flex;
     justify-content: space-between;
+  }
+}
+
+.paper-type {
+  width: 92px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  padding: 4px 0;
+  border-radius: 4px;
+}
+
+.paper-type-regular {
+  background-color: rgb(232, 243, 255);
+  color: rgb(22, 93, 255);
+}
+
+.paper-type-random {
+  background-color: rgb(255, 243, 232);
+  color: rgb(247, 114, 52);
+}
+
+.paper-type-ai {
+  background-color: rgb(232, 255, 234);
+  color: rgb(0, 180, 42);
+}
+
+.list-bottom {
+  margin-top: 24px;
+  width: 100%;
+  padding-left: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .selector-operate {
+    display: flex;
+    gap: 16px
   }
 }
