feat: #240717 按题型抽题优化

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -271,6 +271,10 @@
             flex-shrink: 0;
           }
 
+          .question-type-display-col {
+            flex-grow: 1;
+          }
+
           .question-type-display-header-top {
             display: flex;
             padding: 16px;
