--- a/app/Resources/views/assessment/show.html.twig
+++ b/app/Resources/views/assessment/show.html.twig
@@ -28,7 +28,7 @@
     {% include 'testpaper-copy-style.html.twig' %}
     <div id="app" style="min-height:500px"></div>
     <input type="hidden" name="assessment" value='{{ assessment|json_encode }}'>
-    <input type="hidden" name="assessmentChildIds" value='{{ assessmentChildIds|json_encode }}'>
+    <input type="hidden" name="randomAssessmentIds" value='{{ assessmentChildIds|json_encode }}'>
     <input type="hidden" name="ckeditor_path" value="{{ asset('static-dist/libs/es-ckeditor/ckeditor.js') }}">
     <input type="hidden" name="jquery_path" value="{{ asset('static-dist/libs/jquery/dist/jquery.min.js') }}">
     <input type="hidden" name="ckeditor_image_upload_url" value="{{ path('editor_upload', {token:upload_token('course')}) }}">
