feat: #104858 试卷列表页样式调整

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -107,7 +107,6 @@
   }
 
   .checkbox-text {
-    padding-left: 32px;
     font-weight: normal;
   }
 
@@ -120,7 +119,7 @@
   .operation-group {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 8px;
   }
 
   .operation-group-button-active {
@@ -150,5 +149,11 @@
   .paper-type-ai {
     background-color: rgb(232, 255, 234);
     color: rgb(0, 180, 42);
+  }
+
+  .ant-table-selection-column {
+    padding: 16px 0 !important;
+    width: 16px;
+    max-width: 16px;
   }
 }
