--- a/app/Resources/views/question-bank/testpaper/index.html.twig
+++ b/app/Resources/views/question-bank/testpaper/index.html.twig
@@ -28,6 +28,7 @@
       <input type="hidden" id="jquery_path" value="{{ asset('static-dist/libs/jquery/dist/jquery.min.js') }}">
       <input type="hidden" id="ckeditor_image_upload_url" value="{{ path('editor_upload', {token: upload_token('question')}) }}">
       <input type="hidden" id="ckeditor_image_download_url" value="{{ path('editor_download', {token: upload_token('question')}) }}">
+      <input type="hidden" id="importUrl" value="{{ path('question_bank_manage_testpaper_import', {id: questionBank.id}) }}">
     </div>
   </div>
 {% endblock %}
