--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
@@ -42,7 +42,9 @@
         align-items: center;
 
         .test-preview-content-basic-information-item-value {
-          color: var(---Text-5, #37393D);
+          padding: 0;
+          border: 0;
+          box-shadow: none;
           font-family: "PingFang SC";
           font-size: 16px;
           font-style: normal;
