fix: #106104 AI个性卷编辑页面，显示试卷难度设置，点击保存提示

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
@@ -165,3 +165,16 @@
 
   }
 }
+
+.paper-description {
+
+  .ant-modal-body {
+    max-height: 460px;
+    min-width: 160px;
+    overflow-y: auto;
+  }
+
+  img {
+    max-width: 100%;
+  }
+}
