fix: #106112 创建AI个性卷页面，输入多个文字会遮挡字符实时校验的提示

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
@@ -155,7 +155,7 @@
 
         .ant-input {
           height: 32px;
-          padding: 6px 12px;
+          padding: 6px 54px 6px 12px;
           border-radius: 2px;
           border: 1px solid #E5E6EB;
           background: #FFF;
