fix: #106113 随机卷/AI个性卷创建页面题目数量设置样式错误

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -678,6 +678,9 @@
         justify-content: space-between;
         padding: 16px;
         white-space: nowrap;
+        width: 100%;
+        max-width: 100%;
+        overflow-x: auto;
       }
 
     }
@@ -791,6 +794,8 @@
 
     .question-type-category-display-header-type {
       flex: 1 0 0;
+      max-width: 100%;
+      overflow-x: auto;
     }
 
     .question-type-category-display-header-top-content {
