feat: #240723 题目数输入实时校验

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -384,6 +384,15 @@
               font-weight: 400;
               line-height: 22px;
             }
+
+            .question-type-display-cell-number-total-error {
+              color: #F53F3F;
+              font-family: "PingFang SC";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 22px;
+            }
           }
 
           .question-type-display-cell-number-disable {
@@ -897,6 +906,15 @@
 
       .question-type-category-display-cell-number-total {
         color: #C0C0C2;
+      }
+
+      .question-type-category-display-cell-number-total-error {
+        color: #F53F3F;
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
       }
 
       .question-type-category-display-cell-number-edit {
