feat: #240723 未选分类禁用清空按钮

--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -1366,6 +1366,19 @@
               letter-spacing: 0.1px;
               cursor: pointer;
             }
+
+            .question-category-choose-selected-header-clear-disable {
+              color: #C0C0C2;
+              text-align: right;
+              font-feature-settings: 'clig' off, 'liga' off;
+              font-family: "PingFang SC";
+              font-size: 14px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 22px;
+              letter-spacing: 0.1px;
+              cursor: not-allowed;
+            }
           }
 
           .question-category-choose-selected-body {
