--- a/app/Resources/views/testpaper/manage/random-item-get-table.html.twig
+++ b/app/Resources/views/testpaper/manage/random-item-get-table.html.twig
@@ -5,10 +5,10 @@
 </style>
 <table class="table table-bordered mb0">
   <tr>
-    <td></td>
-    <td width="10%">{{'question.nums'|trans}}</td>
-    <td>{{'site.question.attr.score'|trans}}</td>
-    <td>试卷(份)</td>
+    <td width="19%"></td>
+    <td width="27%">{{'question.nums'|trans}}</td>
+    <td width="27%">{{'site.question.attr.score'|trans}}</td>
+    <td width="27%">试卷(份)</td>
   </tr>
   {% set first = true %}
   {% for section in assessment.sections %}
