--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-create-model.less
@@ -91,11 +91,11 @@
       }
 
       &.active {
-        border: 1px solid #46C37B;
+        border: 1px solid @brand-primary;
         background: rgba(70, 195, 123, 0.02);
 
         .create-test-paper-modal-body-list-item-content-title-text, .create-test-paper-modal-body-list-item-content-description {
-          color: #46C37B !important;
+          color: @brand-primary !important;
         }
 
         .list-image {
