--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-save.less
@@ -476,7 +476,7 @@
             align-items: center;
             gap: 10px;
             border-radius: 2px;
-            border: 1px dashed #46C37B;
+            border: 1px dashed @brand-primary;
             background: #FFF;
             cursor: pointer;
 
@@ -486,7 +486,7 @@
             }
 
             .question-category-choose-btn-text {
-              color: #46C37B;
+              color: @brand-primary;
               text-align: center;
               font-family: "PingFang SC";
               font-size: 14px;
@@ -518,12 +518,12 @@
             height: 8px;
             flex-shrink: 0;
             border-radius: 48px;
-            background: #46C37B;
+            background: @brand-primary;
           }
 
           .ant-slider-track {
             height: 8px;
-            background: #46C37B;
+            background: @brand-primary;
           }
 
           .ant-slider-handle {
@@ -531,7 +531,7 @@
             height: 24px;
             flex-shrink: 0;
             margin-top: 0;
-            border: solid 1px #46C37B;
+            border: solid 1px @brand-primary;
           }
         }
 
@@ -644,8 +644,8 @@
       align-items: center;
       gap: 8px;
       border-radius: 2px;
-      border: 1px solid #46C37B;
-      background: #46C37B;
+      border: 1px solid @brand-primary;
+      background: @brand-primary;
       box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
       color: #FFF;
       text-align: center;
@@ -766,7 +766,7 @@
       flex: none;
 
       a {
-        color: #46C37B;
+        color: @brand-primary;
       }
     }
 
@@ -1248,7 +1248,7 @@
               }
 
               .question-category-choose-all-body-category-operation {
-                color: #46C37B;
+                color: @brand-primary;
                 font-family: "PingFang SC";
                 font-size: 14px;
                 font-style: normal;
@@ -1310,7 +1310,7 @@
                 gap: 8px;
                 border: hidden;
                 border-radius: 2px;
-                background: #46C37B;
+                background: @brand-primary;
                 box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
 
                 color: #FFF;
@@ -1356,7 +1356,7 @@
             }
 
             .question-category-choose-selected-header-clear {
-              color: #46C37B;
+              color: @brand-primary;
               text-align: right;
               font-feature-settings: 'clig' off, 'liga' off;
               font-family: "PingFang SC";
@@ -1473,7 +1473,7 @@
             gap: 10px;
             border-radius: 2px;
             border: hidden;
-            background: #46C37B;
+            background: @brand-primary;
             color: #FFF;
           }
 
