--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-preview.less
@@ -14,7 +14,6 @@
     font-weight: 500;
     line-height: 24px; /* 150% */
   }
-
   .test-preview-content-basic {
     display: flex;
     padding: 16px;
@@ -38,7 +37,7 @@
 
       .test-preview-content-basic-information-item {
         display: flex;
-        gap: 16px;
+        gap: 8px;
         align-items: center;
 
         .test-preview-content-basic-information-item-value {
@@ -46,10 +45,13 @@
           border: 0;
           box-shadow: none;
           font-family: "PingFang SC";
-          font-size: 16px;
+          font-size: 14px;
           font-style: normal;
           font-weight: 400;
           line-height: 22px;
+        }
+        span.test-preview-content-basic-information-item-value {
+          color: #37393D;
         }
       }
     }
@@ -170,7 +172,7 @@
 
   .ant-modal-body {
     max-height: 460px;
-    min-width: 160px;
+    min-height: 160px;
     overflow-y: auto;
   }
 
