--- a/app/Resources/views/activity/testpaper/preview.html.twig
+++ b/app/Resources/views/activity/testpaper/preview.html.twig
@@ -1,5 +1,5 @@
 {% if assessment|default('') %}
-  {% include 'assessment/show.html.twig' with {inIframe: 1} %}
+  {% include 'assessment/show.html.twig' %}
 {% else %}
   {{ 'course.plan_task.activity_manage.testpaper.empty_tips'|trans }}
 {% endif %}
