--- a/app/Resources/views/answer-engine/answer.html.twig
+++ b/app/Resources/views/answer-engine/answer.html.twig
@@ -33,6 +33,7 @@
   <input type="hidden" name="answer_record_id" value='{{ answerRecord.id }}'>
   <input type="hidden" name="submit_goto_url" value='{{ submitGotoUrl }}'>
   <input type="hidden" name="save_goto_url" value='{{ saveGotoUrl }}'>
+  <input type="hidden" name="return_url" value="{{ returnUrl }}">
   <input type="hidden" name="show_save_progress_btn" value="{{ showSaveProgressBtn|default(1) }}">
 
   {{ render(controller('AppBundle:FaceInspection/Capture:inspection', {request:app.request, answerSceneId: answerRecord.answer_scene_id, answerRecordId: answerRecord.id})) }}
