--- a/app/Resources/static-src/app/less/admin-v2.less
+++ b/app/Resources/static-src/app/less/admin-v2.less
@@ -1,10 +1,10 @@
 @img-src: "/static-dist/app/img/";
 @import '~codeages-design/../../src/less/codeages-design.less';
-@import "~@codeages/design-vue/dist/antd.css";
+//@import "~@codeages/design-vue/dist/antd.css";
+//@import '~common/ant-reset.less';
 @import '~@codeages/styles/index.min.less';
 @import 'admin-v2/variables.less';
 @import '~common/mixins.less';
-@import '~common/ant-reset.less';
 @import '~vant/lib/index.less';
 
 @import 'admin-v2/size.less';
