feat: #240819 商品关联合同

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -191,3 +191,4 @@
 @import 'page/question-bank/testpaper-save.less';
 @import 'page/question-bank/testpaper-preview.less';
 @import 'page/question-bank/ai-analysis-intro-modal.less';
+@import 'page/contract-dropdown-menu.less';
