fix: #106998 修复合同名称过长时的显示问题

--- a/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
+++ b/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
@@ -7,7 +7,15 @@
   align-self: stretch;
 }
 
+.contract-name {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .contract-dropdown-menu {
+  width: 200px;
+
   .ant-dropdown-menu-item {
     padding: 5px 12px;
     cursor: default;
