--- a/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
+++ b/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
@@ -15,6 +15,8 @@
 
 .contract-dropdown-menu {
   width: 200px;
+  height: 320px;
+  overflow-y: scroll;
 
   .ant-dropdown-menu-item {
     padding: 5px 12px;
