feat: #240820 合同预览替换变量

--- a/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
+++ b/app/Resources/static-src/app/less/page/contract-dropdown-menu.less
@@ -15,7 +15,7 @@
 
 .contract-dropdown-menu {
   width: 200px;
-  height: 320px;
+  max-height: 320px;
   overflow-y: scroll;
 
   .ant-dropdown-menu-item {
