--- a/app/Resources/views/my/layout.html.twig
+++ b/app/Resources/views/my/layout.html.twig
@@ -75,6 +75,10 @@
             <a href="{{path('my_wrong_question_book')}}">{{'my.wrong_question_book'|trans}}</a>
           </li>
 
+          <li class="list-group-item {% if side_nav == 'my-contract' %} active {% endif %}">
+            <a href="{{path('my_contract')}}">{{'my.contract'|trans}}</a>
+          </li>
+
           {{ slot('my.learning.menu', {'side_nav': side_nav}) }}
         </ul>
       </div>
