--- a/app/Resources/views/item-bank-exercise-manage/exercise-set/base-info/marketing.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/exercise-set/base-info/marketing.html.twig
@@ -51,6 +51,10 @@
           </div>
         </div>
 
+        <div id="contract-setting"
+             data-exercise="{{ exercise|json_encode }}"
+        ></div>
+
         {% include 'item-bank-exercise-manage/exercise-set/base-info/set-rule.html.twig' %}
 
         <div class="form-group">
