feat: #106500 新增签署标题传值

--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -23,6 +23,8 @@
     <input type="hidden" name="sign" value="{{ contract.sign }}">
     <input type="hidden" name="contract-id" value="{{ contract.id}}">
     <input type="hidden" name="goods-key" value="{{ contract.goodsKey}}">
+    <input type="hidden" name="target-title" value="{{ contract.targetTitle}}">
+    <input type="hidden" name="nickname" value="{{ user.nickname}}">
     {% endif %}
     <input type="hidden" name="task-id" value="{{ task.id }}">
     <input type="hidden" name="task-result-status" value="{{ taskResult.status }}">
