--- a/app/Resources/views/answer-engine/answer.html.twig
+++ b/app/Resources/views/answer-engine/answer.html.twig
@@ -35,7 +35,16 @@
   <input type="hidden" name="save_goto_url" value='{{ saveGotoUrl }}'>
   <input type="hidden" name="return_url" value="{{ returnUrl }}">
   <input type="hidden" name="show_save_progress_btn" value="{{ showSaveProgressBtn|default(1) }}">
-
+  {% if contract.sign|default('') != 'no' %}
+    <input type="hidden" name="sign" value="{{ contract.sign }}">
+    <input type="hidden" name="contract-id" value="{{ contract.id}}">
+    <input type="hidden" name="goods-key" value="{{ contract.goodsKey}}">
+    <input type="hidden" name="target-title" value="{{ contract.targetTitle}}">
+    <input type="hidden" name="nickname" value="{{ user.nickname}}">
+  {% endif %}
+  {% if contract.sign|default('') != 'no' %}
+    <div id="sign-contract-modal"></div>
+  {% endif %}
   {{ render(controller('AppBundle:FaceInspection/Capture:inspection', {request:app.request, answerSceneId: answerRecord.answer_scene_id, answerRecordId: answerRecord.id})) }}
   {% block footer %}
       {% if showHeader|default(0) %}{{ parent() }}{% endif %}
