feat: #240828 后台antdv样式抽离

--- a/app/Resources/views/admin-v2/operating/mobile-setting/app-decorate.html.twig
+++ b/app/Resources/views/admin-v2/operating/mobile-setting/app-decorate.html.twig
@@ -6,6 +6,7 @@
 
 {% block stylesheets %}
   {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
   <style>
     html {
       min-width: 1200px;
