--- a/app/Resources/views/admin-v2/teach/multi_class_product/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/multi_class_product/index.html.twig
@@ -4,6 +4,11 @@
 
 {% do script(['app/vue/views/teach/multi_class_product/index.js']) %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main %}
   <div id="app"></div>
 {% endblock %}
