--- a/app/Resources/views/classroom-manage/index.html.twig
+++ b/app/Resources/views/classroom-manage/index.html.twig
@@ -34,5 +34,5 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  <link href="/static-dist/vue3/js/contract/index.css" rel="stylesheet">
+  <link href="{{ asset('static-dist/vue3/js/contract/index.css') }}" rel="stylesheet"/>
 {% endblock %}
