--- a/app/Resources/views/admin-v2/education/overview/index.html.twig
+++ b/app/Resources/views/admin-v2/education/overview/index.html.twig
@@ -4,6 +4,11 @@
 
 {% set menu = 'admin_v2_education_overview_manage' %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/admin-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main %}
   <div id="app"></div>
 {% endblock %}
