--- a/app/Resources/views/item-bank-exercise-manage/exercise-set/base-info/marketing.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/exercise-set/base-info/marketing.html.twig
@@ -82,5 +82,5 @@
 
 {% block stylesheets %}
   {{ parent() }}
-  <link href="/static-dist/vue3/js/contract/index.css" rel="stylesheet">
+  <link href="{{ asset('static-dist/vue3/js/contract/index.css') }}" rel="stylesheet"/>
 {% endblock %}
