--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -64,7 +64,7 @@
             data-last-learn-time="{{ taskResult.lastLearnTime|default(0) }}"
             data-user-id="{{ taskResult.userId|default(0) }}"
             data-file-id="{{ media.id|default(0) }}"
-            data-url="{{ path('course_task_activity_show',{courseId:task.courseId, id:task.id, preview:app.request.get('preview') }) }}"
+            data-url="{{ path('course_task_activity_show',{courseId:task.courseId, id:task.id, preview:app.request.get('preview'), sign:contract.sign}) }}"
                   data-video-header-length="{{ videoHeaderLength|default(0) }}"
             style="width:100%;height:100%;border:0px"
             allowfullscreen webkitallowfullscreen>
