--- a/web/activities/video/resources/views/show/index.html.twig
+++ b/web/activities/video/resources/views/show/index.html.twig
@@ -18,7 +18,7 @@
          data-finish-type="{{ activity.finishType|default('') }}"
          data-finish-data="{{ activity.finishData|default('') }}">
       {#  如果用户上次观看过视频，需要请求上次的视频时长 作为参数 starttime= xxx #}
-      {{ render(controller('AppBundle:Player:show', {id: video.mediaId, isPart: true, context: {activityId: activity.id }, file:activity.ext.file|default('')})) }}
+      {{ render(controller('AppBundle:Player:show', {id: video.mediaId, isPart: true, context: {activityId: activity.id, sign:activity.sign|default('no')}, file:activity.ext.file|default('')})) }}
     </div>
   {% else %}
     <div class="iframe-parent-content iframe-parent-full" id="video-content" data-role="lesson-content">
