--- a/app/Resources/views/admin-v2/system/contract/index.html.twig
+++ b/app/Resources/views/admin-v2/system/contract/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'admin-v2/content-layout.html.twig' %}
 
-{% do script([ 'vue3/js/contract/index.js']) %}
+{% do script(['vue3/js/contract/index.js']) %}
 
 {% set menu = 'admin_v2_contract_manage' %}
 
 {% block main %}
   {% if cloudStatus() %}
     <div id="app"></div>
-    <input type="hidden" id="ckeditor_image_upload_url" value="{{ path('editor_upload', {token: upload_token('question')}) }}">
-    <input type="hidden" id="ckeditor_image_download_url" value="{{ path('editor_download', {token: upload_token('question')}) }}">
+    <input type="hidden" id="ckeditor_image_upload_url" value="{{ path('editor_upload', {token: upload_token('system')}) }}">
+    <input type="hidden" id="ckeditor_image_download_url" value="{{ path('editor_download', {token: upload_token('system')}) }}">
   {% else %}
     <div style="width: 100%; text-align: center;padding:24px;">
       <a href="{{ path('admin_v2_my_cloud_overview') }}" style="display: inline-block; width: 100%;">
