--- a/app/Resources/views/classroom-manage/wrong-question/index.html.twig
+++ b/app/Resources/views/classroom-manage/wrong-question/index.html.twig
@@ -4,6 +4,11 @@
 {% set side_nav = 'wrong-questions' %}
 {% do script(['app/vue/views/classroom_manage/wrong_question/index.js']) %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main %}
   <div class="panel panel-default panel-col">
     <div class="panel-heading">{{'学员错题'|trans}}</div>
