--- a/app/Resources/views/classroom-manage/live-statistics/index.html.twig
+++ b/app/Resources/views/classroom-manage/live-statistics/index.html.twig
@@ -4,6 +4,11 @@
 {% set side_nav = 'live-statistics' %}
 {% do script(['app/vue/views/classroom_manage/live_statistics/index.js']) %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main %}
   <input type="hidden" class="js-classroom-id" value="{{ classroom.id }}" />
   <div id="app">
