--- a/app/Resources/views/course-manage/live/live-statistics.html.twig
+++ b/app/Resources/views/course-manage/live/live-statistics.html.twig
@@ -8,6 +8,11 @@
 
 {% do script(['app/vue/views/course_manage/live_statistics/index.js']) %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main %}
   <input type="hidden" class="js-course-id" value="{{ course.id }}" />
   <div id="app">
