--- a/app/Resources/views/my/learning/wrong-question-book/detail.html.twig
+++ b/app/Resources/views/my/learning/wrong-question-book/detail.html.twig
@@ -2,6 +2,11 @@
 
 {% do script(['app/vue/views/my/learning/wrong_question_book/detail/index.js']) %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block content %}
 {% include 'testpaper-copy-style.html.twig' %}
 <div id="app"></div>
