--- a/app/Resources/views/settings/qualification.html.twig
+++ b/app/Resources/views/settings/qualification.html.twig
@@ -8,6 +8,11 @@
   {{'user.settings.teacher_qualification'|trans}}
 {% endblock %}
 
+{% block stylesheets %}
+  {{ parent() }}
+  <link href="{{ asset('static-dist/app/css/main-ant.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block main_body %}
   <input type="hidden" value="{{ user_id }}" class="js-user-id">
   <div id="app" />
